--- a/admin/index.html
+++ b/admin/index.html
@@ -242,7 +242,7 @@
                             <a class="btn btn-primary rounded-pill py-2 px-4" href="#">Learn More</a>
                         </div>
                     </div>
-                    <div class="col-md-6 col-lg-6 col-xl-3 wow fadeInUp" data-wow-delay="0.6s">
+                   <!-- <div class="col-md-6 col-lg-6 col-xl-3 wow fadeInUp" data-wow-delay="0.6s">
                         <div class="feature-item p-4 pt-0">
                             <div class="feature-icon p-4 mb-4">
                                 <i class="fa fa-bullseye fa-3x"></i>
@@ -263,7 +263,7 @@
                             </p>
                             <a class="btn btn-primary rounded-pill py-2 px-4" href="#">Learn More</a>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </div>
