--- a/admin/index.html
+++ b/admin/index.html
@@ -357,12 +357,12 @@
                                     <i class="fa fa-users fa-2x"></i>
                                 </div>
                             </div>
-                            <div class="service-content p-4">
+                            <!-- <div class="service-content p-4">
                                 <div class="service-content-inner">
                                     <a href="#" class="d-inline-block h4 mb-4">Life Insurance</a>
                                     <p class="mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis, eum!</p>
                                     <a class="btn btn-primary rounded-pill py-2 px-4" href="#">Read More</a>
-                                </div>
+                                </div> -->
                             </div>
                         </div>
                     </div>
