--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 <nav class="navbar navbar-expand-lg navbar-light"> 
                     <a href="#" class="navbar-brand p-0">
                         <!--buat bagian tulisan rental mas adit-->
-                        <h1 class="text-primary mb-0">Rental Mas Adit</h1>
+                        <h1 class="text-primary mb-0"><i class="fa fa-car fa-1x"></i> <i class="fa fa-motorcycle fa-1x"></i> Rental Mas Adit</h1>
                         <!--<img src="img/logo.png" alt="Logo">-->
                     </a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
@@ -66,8 +66,17 @@
                                 </div>
                             </div> 
                             <a href="contact.html" class="nav-item nav-link">kontak</a>
-                            </div>
                         </div>
+
+                        <div class="d-none d-xl-flex flex-shrink-0 ps-4">
+                            <a href="#" class="btn btn-light btn-lg-square rounded-circle position-relative wow tada" data-wow-delay=".9s">
+                                <i class="fa fa-user fa-2x"></i>
+                                <div class="position-absolute" style="top: 7px; right: 12px;">
+                        </div>
+                    </a>
+                            <div class="d-flex flex-column ms-3">
+                                <span>login <br> Admin</span>
+                            </div>
                     </div>
                 </nav>
             </div>
@@ -210,64 +219,40 @@
         <!-- Testimonial End -->
     
 
-        <!-- Layanan Start -->
-        <div class="container-fluid feature bg-light py-5">
-            <div class="container py-5">
-                <div class="text-center mx-auto pb-5 wow fadeInUp" data-wow-delay="0.2s" style="max-width: 800px;">
-                    <h4 class="text-primary">Layanan Kami</h4>
-                    <h1 class="display-4 mb-4">memberikan pengalaman menarik tentang hal rental</h1>
-                    <p class="mb-0">rental mas adit sudah terpercaya di tingkat nasional dengan reputasi global.
-                    </p>
+            <!-- Layanan Start -->
+<div class="container-fluid feature bg-light py-5 d-flex align-items-center justify-content-center">
+    <div class="text-center mx-auto">
+        <div class="pb-5 wow fadeInUp" data-wow-delay="0.2s" style="max-width: 800px; margin: auto;">
+            <h4 class="text-primary">Layanan Kami</h4>
+            <h1 class="display-4 mb-4">Memberikan pengalaman menarik tentang hal rental</h1>
+            <p class="mb-0">Rental mas Adit sudah terpercaya di tingkat nasional dengan reputasi global.</p>
+        </div>
+        <div class="row g-4 justify-content-center">
+            <div class="col-md-6 col-lg-6 col-xl-3 wow fadeInUp" data-wow-delay="0.2s">
+                <div class="feature-item p-4 pt-0 text-center">
+                    <div class="feature-icon p-4 mb-4">
+                        <i class="fa fa-car fa-3x"></i>
+                    </div>
+                    <h4 class="mb-4">Rental Mobil</h4>
+                    <p class="mb-4">Terdapat beragam jenis mobil yang tersedia di rental kami.</p>
+                    <a class="btn btn-primary rounded-pill py-2 px-4" href="#">Learn More</a>
                 </div>
-                <div class="row g-4">
-                    <div class="col-md-6 col-lg-6 col-xl-3 wow fadeInUp" data-wow-delay="0.2s">
-                        <div class="feature-item p-4 pt-0">
-                            <div class="feature-icon p-4 mb-4">
-                                <i class="fa fa-car fa-3x"></i>
-                            </div>
-                            <h4 class="mb-4">Rental mobil</h4>
-                            <p class="mb-4">terdapat beragam jenis mobil yang tersedia di rental kami
-                            </p>
-                            <a class="btn btn-primary rounded-pill py-2 px-4" href="#">Learn More</a>
-                        </div>
+            </div>
+            <div class="col-md-6 col-lg-6 col-xl-3 wow fadeInUp" data-wow-delay="0.4s">
+                <div class="feature-item p-4 pt-0 text-center">
+                    <div class="feature-icon p-4 mb-4">
+                        <i class="fa fa-motorcycle fa-3x"></i>
                     </div>
-                    <div class="col-md-6 col-lg-6 col-xl-3 wow fadeInUp" data-wow-delay="0.4s">
-                        <div class="feature-item p-4 pt-0">
-                            <div class="feature-icon p-4 mb-4">
-                                <i class="fa fa-dollar-sign fa-3x"></i>
-                            </div>
-                            <h4 class="mb-4">Anytime Money Back</h4>
-                            <p class="mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea hic laborum odit pariatur...
-                            </p>
-                            <a class="btn btn-primary rounded-pill py-2 px-4" href="#">Learn More</a>
-                        </div>
-                    </div>
-                    <!--<div class="col-md-6 col-lg-6 col-xl-3 wow fadeInUp" data-wow-delay="0.6s">
-                        <div class="feature-item p-4 pt-0">
-                            <div class="feature-icon p-4 mb-4">
-                                <i class="fa fa-bullseye fa-3x"></i>
-                            </div>
-                            <h4 class="mb-4">Flexible Plans</h4>
-                            <p class="mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea hic laborum odit pariatur...
-                            </p>
-                            <a class="btn btn-primary rounded-pill py-2 px-4" href="#">Learn More</a>
-                        </div>
-                    </div>
-                    <div class="col-md-6 col-lg-6 col-xl-3 wow fadeInUp" data-wow-delay="0.8s">
-                        <div class="feature-item p-4 pt-0">
-                            <div class="feature-icon p-4 mb-4">
-                                <i class="fa fa-headphones fa-3x"></i>
-                            </div>
-                            <h4 class="mb-4">24/7 Fast Support</h4>
-                            <p class="mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea hic laborum odit pariatur...
-                            </p>
-                            <a class="btn btn-primary rounded-pill py-2 px-4" href="#">Learn More</a>
-                        </div>
-                    </div> -->
+                    <h4 class="mb-4">Rental motor</h4>
+                    <p class="mb-4">Terdapat beragam jenis mobil yang tersedia di rental kami.</p>
+                    <a class="btn btn-primary rounded-pill py-2 px-4" href="#">Learn More</a>
                 </div>
             </div>
         </div>
-        <!-- Layanan End -->
+    </div>
+</div>
+<!-- Layanan End -->
+
 
         <!-- About Start -->
         <div class="container-fluid bg-light about pb-5">
