--- a/index.html
+++ b/index.html
@@ -602,7 +602,7 @@
                         <div class="col-md-6 text-center">
                             <span class="text-body">
                                 <a href="#" class="border-bottom text-white">
-                                    <i class="fas fa-copyright text-light me-2"></i>Rental Mas Adit 2025
+                                    <i class="fas fa-copyright text-light me-2"></i>Quick Drive 2025
                                 </a>, All right reserved.
                             </span>
                         </div>
